--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Andy Fall",
     "repository": {
         "type": "git",
-        "url": "git@github.com:macanfa/docker-node-webapp.git"
+        "url": "https://github.com/macanfa/docker-node-webapp.git"
     },
     "main": "app.js",
     "scripts": {
