--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "node-webapp",
-    "version": "1.0.1",
-    "description": "NodeJS WebApp on Docker",
-    "author": "Andy Fall",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/macanfa/docker-node-webapp.git"
-    },
-    "main": "app.js",
-    "scripts": {
-        "start": "node cluster.js"
-    },
-    "dependencies": {
-        "express": "^4.14.0",
-        "body-parser": "^1.15.2",
-        "cluster": "^0.7.7",
-        "morgan": "^1.7.0"
-    },
-    "devDependencies": {},
-    "optionalDependencies": {},
-    "engines": {
-        "node": "*"
-    }
+  "name": "node-webapp",
+  "version": "1.0.1",
+  "description": "NodeJS WebApp on Docker",
+  "author": "Andy Fall",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/macanfa/docker-node-webapp.git"
+  },
+  "main": "app.js",
+  "scripts": {
+    "start": "node cluster.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cluster": "^0.7.7",
+    "express": "^4.14.0",
+    "mime": "^1.3.4",
+    "morgan": "^1.7.0"
+  },
+  "devDependencies": {},
+  "optionalDependencies": {},
+  "engines": {
+    "node": "*"
+  }
 }
